# mixed-diffusionblocks

./: .gitignore  README.md  llm_dblock_train.py  llm_quality_benchmark.py  mlx_data.py  mlx_dblock_modules.py  mlx_main.py  mlx_model.py  mlx_vit.py  pyproject.toml  qwen_memory_benchmark.py  qwen_quality_benchmark.py
docs/: experiment_protocol.md  launch_notes.md  m4_max_36gb_benchmarks.md  method_alignment.md  quality_status.md  upstream_code_mapping.md
docs/results/: qwen05_dblock_cw0_100.json  qwen05_dblock_cw100_100.json  qwen05_dblock_cw100_1000.json  qwen05_dblock_cw100_200.json  qwen05_dblock_cw100_lr3e5_100.json  qwen05_dblock_cw25_100.json  qwen05_dblock_cw500_100.json  qwen05_dblock_cw50_100.json  qwen05_full_100.json  qwen05_memory_cw0_seq128.json  qwen05_memory_cw100_seq128.json  qwen05_mixed_target_curve.json  qwen15_full_100.json  qwen15_memory_cw0_seq128.json  qwen15_memory_cw100_seq128.json  qwen15_mixed_target_curve.json  qwen25_7b_memory_cw0_seq2048.json  qwen25_7b_memory_cw0_seq512.json  qwen25_7b_memory_cw100_seq2048.json  qwen25_7b_memory_cw100_seq512.json  qwen3_memory_cw0_seq128.json  qwen3_memory_cw100_seq128.json  wikitext2_qwen05_dblock_cw0_100.json  wikitext2_qwen05_dblock_cw100_100.json  wikitext2_qwen05_full_100.json  wikitext2_qwen05_mixed_target_curve.json  wikitext2_qwen05_seq1024_dblock_cw0_100.json  wikitext2_qwen05_seq1024_dblock_cw100_100.json  wikitext2_qwen05_seq1024_full_100.json  wikitext2_qwen05_seq512_full_100.json  (+3 more)
llm_dblocks/: __init__.py  adapters.py  data.py  tiny_lm.py  trainer.py
scripts/: prepare_wikitext2.py
