[project]
name = "mixed-diffusionblocks"
version = "0.1.0"
description = "Mixed DiffusionBlocks for Apple Silicon LLM fine-tuning with MLX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==3.5.0",
    "huggingface-hub[hf-xet]>=0.31.2",
    "hf-transfer>=0.1.9",
    "mlx>=0.31.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "numpy>=1.26",
    "pillow>=10.0",
    "scipy>=1.16.2",
]

[project.optional-dependencies]
llm = [
    "mlx-lm>=0.28.0",
]
torch = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "lightning==2.5.0",
    "wandb==0.18.6",
    "transformers==4.52.4",
    "torchmetrics>=1.6",
    "flash-attn==2.7.4.post1; sys_platform == 'linux'",
]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'"}
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'"}
]
